# tnfsh-timetable-core

./: README.md  class_307.html  convert_json_to_txt.py  index.json  main.py  pyproject.toml  reverse_index.json  setup.py  陳暐捷_timetable.csv  陳暐捷_timetable.json
cache/: timetable_slot_log.json
example/other/: get_last_update.py  get_periods.py
example/scheduling/: basic_rotation.py  basic_swap.py  get_regrex_course.py
example/timetable/: get_class_or_teacher_timetable.py  get_course_info.py
tests/: test_core.py
tests/assets/: class_307.ics
tests/model/: node.py  swap.py  utils.py
tests/test_index/: __init__.py  test_cache.py  test_crawler.py  test_identify_index_key.py  test_index.py
tests/test_scheduling/: test_rotation.py  test_swap.py
tests/test_timetable/: test_cache.py  test_crawler.py  test_models.py
tests/test_timetable_slot_log/: test_cache.py  test_crawler.py
tests/test_timetable_slot_log_dict/: test_cache.py  test_crawler.py
tnfsh_timetable_core/: __init__.py
tnfsh_timetable_core/abc/: cache_abc.py  crawler_abc.py  domain_abc.py
tnfsh_timetable_core/index/: __init__.py  cache.py  crawler.py  identify_index_key.py  index.py  models.py  reverse.py
tnfsh_timetable_core/models/: __init__.py  crawler_abc.py
tnfsh_timetable_core/scheduling/: models.py  rotation.py  scheduling.py  swap.py  utils.py
tnfsh_timetable_core/timetable/: cache.py  crawler.py  export_calendar.py  models.py  timetable.py
tnfsh_timetable_core/timetable_slot_log/: __init__.py  cache.py  crawler.py  models.py  timetable_slot_log.py
to_txt/cache/: class.txt  (+3 more)
(+466 files in other folders)
